--- a/experiments/configs/config.yaml
+++ b/experiments/configs/config.yaml
@@ -136,7 +136,7 @@ head:
 
 # self-explanatory torch config
 dataloader:
-  batch_size: 32
+  batch_size: 16
   num_workers: 1
   pin_memory: True
   persistent_workers: True
@@ -144,7 +144,7 @@ dataloader:
   drop_last: False
 
 val_dataloader:
-  batch_size: 32
+  batch_size: 16
   num_workers: 1
   shuffle: False
   pin_memory: True
@@ -153,7 +153,7 @@ val_dataloader:
 
 optimizer:
   _target_: torch.optim.AdamW
-  lr: 1.0e-5 # 1e-4
+  lr: 5.0e-5 # 1e-4
   eps: 1.0e-7
   weight_decay: 1e-4
 
@@ -162,12 +162,16 @@ optimizer_misc:
 
 warmup_lr:
   lr: 1e-9
-  step: 1000 # first 1000 iterations
+  step: 1 # first 1 iterations
 
-lr_scheduler:
-  _target_: torch.optim.lr_scheduler.CosineAnnealingLR
-  T_max: ${train.total_epochs}
-  eta_min: 1e-6
+# lr_scheduler:
+#   _target_: torch.optim.lr_scheduler.CosineAnnealingLR
+#   T_max: ${train.total_epochs}
+#   eta_min: 1e-6
+
+lr_scheduler: 
+  _target_: torch.optim.lr_scheduler.ConstantLR
+  factor: 1 # no decay
 
 # training config
 train:
