fixed model loading, added training scripts

--- a/experiments/configs/config.yaml
+++ b/experiments/configs/config.yaml
@@ -47,7 +47,7 @@ dataset:
   action_horizon: 60 # observation: (observation + action) is action horizon
   observation_horizon: 1 # before observation horizon is observation
   dataset_postfix: "_traj${dataset.episode_cnt}" # postfix for the dataset
-  precompute_feat: True # precompute features using pretrained models for stems
+  precompute_feat: False # precompute features using pretrained models for stems
   image_encoder: 'resnet' # which encoder to use as the pretrained model
   dataset_encoder_postfix: "_${dataset.image_encoder}" # another postfix
   use_multiview: False # use multiple camera views
