--- a/experiments/configs/env/locoman.yaml
+++ b/experiments/configs/env/locoman.yaml
@@ -6,8 +6,8 @@ dataset_generator_func:
   _target_: env.realworld.rollout_runner.convert_dataset_image
   # episode_num_pertask: 10000 
   # env_names: ["RealRobotDrakeHammerforhammerEnv-Tool"]
-  task_name: "toy collection"
-  dataset_dir: ~/Human2LocoMan/demonstrations/${domains}"
+  task_name: "locoman"
+  dataset_dir: "~/Human2LocoMan/demonstrations/${domains}"
   action_name: ['actions/body', 'actions/eef', 'actions/gripper']
   observation_name: ['proprioceptions/body', 'proprioceptions/eef', 'proprioceptions/gripper', 'proprioceptions/eef_to_body']
   camera_names: ['main_left', 'main_right', 'wrist']
@@ -49,7 +49,7 @@ dataset:
   action_horizon: 60 # observation: (observation + action) is action horizon
   observation_horizon: 1 # before observation horizon is observation
   dataset_postfix: "_traj${dataset.episode_cnt}" # postfix for the dataset
-  precompute_feat: False # precompute features using pretrained models for stems
+  precompute_feat: True # precompute features using pretrained models for stems
   image_encoder: 'resnet' # which encoder to use as the pretrained model
   dataset_encoder_postfix: "_${dataset.image_encoder}" # another postfix
   use_multiview: False # use multiple camera views
@@ -60,23 +60,7 @@ dataset:
   data_augment_ratio: 1 # add data augmentation to the images
   proprioception_expand: False # expand proprioception to use multiple tokens
   proprioception_expand_dim: 32 # expand proprioception dimensions
-  task_description: "toy collection" # task description, overrides the task_name in dataset_generator_func when computing T5 features
-
-network:
-  _target_: hpt.models.policy.Policy
-  embed_dim: 128
-  num_blocks: 8 # num of blocks in the trunk transformer
-  num_heads: 16 # num of heads in the trunk transformer
-  drop_path: 0.1 # drop path in the trunk transformer
-  use_modality_embedding: True # add trainable modality position tokens
-  use_domain_embedding: False # whether to add domain-specific trainable parameters
-  observation_horizon: ${dataset.horizon} # the observation history
-  action_horizon: 1 # open loop action steps. <= the dataset action horizons
-  token_postprocessing: "no-op" # maxpool or meanpool the tokens
-  cross_stem_attention: True # use cross attention to combine state and action
-  weight_init_style: 'pytorch' # weight init
-  no_trunk: False # ignore trunk
-  finetune_encoder: True # whether to finetune encoders
+  task_description: "locoman robot manipulation" # task description, overrides the task_name in dataset_generator_func when computing T5 features
 
 head:
   _target_: hpt.models.policy_head.TransformerDecoder
@@ -84,8 +68,8 @@ head:
   output_dim: -1 # overwrite based on dataset
   action_horizon: ${dataset.action_horizon} # action horizon
   crossattn_modality_dropout: 0.1
-  crossattn_heads: 4
-  crossattn_dim_head: 16
+  crossattn_heads: 8
+  crossattn_dim_head: 64
 
 train:
   total_epochs: 500  # maximum training epochs before termination. usually set as maximum
@@ -97,4 +81,4 @@ train:
   wandb_pretrained_dir: "" # use models pretrained on wandb
 
 
-domains: real_toy_collection
+domains: locoman
